syntax = "proto3";

package front.service.v1;


import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "pagination/v1/pagination.proto";
import "content/service/v1/category.proto";

// 类别服务
service CategoryService {
  // 获取类别列表
  rpc ListCategory (pagination.PagingRequest) returns (content.service.v1.ListCategoryResponse) {
    option (google.api.http) = {
      get: "/blog/v1/categories"
    };
  }

  // 获取类别数据
  rpc GetCategory (content.service.v1.GetCategoryRequest) returns (content.service.v1.Category) {
    option (google.api.http) = {
      get: "/blog/v1/categories/{id}"
    };
  }

  // 创建类别
  rpc CreateCategory (content.service.v1.CreateCategoryRequest) returns (content.service.v1.Category) {
    option (google.api.http) = {
      post: "/blog/v1/categories"
      body: "*"
    };
  }

  // 更新类别
  rpc UpdateCategory (content.service.v1.UpdateCategoryRequest) returns (content.service.v1.Category) {
    option (google.api.http) = {
      put: "/blog/v1/categories/{id}"
      body: "category"
    };
  }

  // 删除类别
  rpc DeleteCategory (content.service.v1.DeleteCategoryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/blog/v1/categories/{id}"
    };
  }
}
