syntax = "proto3";

package front.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";

import "file/service/v1/file.proto";

// 文件服务
service FileService {
  // 获取对象存储（OSS）上传链接
  rpc OssUploadUrl (file.service.v1.OssUploadUrlRequest) returns (file.service.v1.OssUploadUrlResponse) {
    option (google.api.http) = {
      post: "/blog/v1/oss-upload-url"
      body: "*"
    };
  }
}
