syntax = "proto3";

package front.service.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "pagination/v1/pagination.proto";
import "content/service/v1/link.proto";

// 链接服务
service LinkService {
  // 获取链接列表
  rpc ListLink (pagination.PagingRequest) returns (content.service.v1.ListLinkResponse) {
    option (google.api.http) = {
      get: "/blog/v1/links"
    };
  }

  // 获取链接数据
  rpc GetLink (content.service.v1.GetLinkRequest) returns (content.service.v1.Link) {
    option (google.api.http) = {
      get: "/blog/v1/links/{id}"
    };
  }

  // 创建链接
  rpc CreateLink (content.service.v1.CreateLinkRequest) returns (content.service.v1.Link) {
    option (google.api.http) = {
      post: "/blog/v1/links"
      body: "*"
    };
  }

  // 更新链接
  rpc UpdateLink (content.service.v1.UpdateLinkRequest) returns (content.service.v1.Link) {
    option (google.api.http) = {
      put: "/blog/v1/links/{id}"
      body: "link"
    };
  }

  // 删除链接
  rpc DeleteLink (content.service.v1.DeleteLinkRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/blog/v1/links/{id}"
    };
  }
}
